[package]
name = "spc-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
